<resources>
    <string name="app_name">Huawei Guide</string>
    <string name="app_name_underline"><u>HMS Guide</u></string>

    <!-- splash ad -->
    <string name="ad_id_splash">testq6zq98hecj</string>
    <string name="owner">HUAWEI Developer</string>
    <string name="media_name">HUAWEI Ads</string>
    <string name="copyright_info">Copyright 2020. Huawei Technologies Co., Ltd</string>
    <string name="status_ad_dismissed">Splash Ad is dismissed.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rs">\u20B9</string>
    <string name="startcourse">Start Course</string>
    <string name="buynow">Buy Now</string>
    <string name="appsharing_url">https://sg.devecostudio.huawei.com/</string>

    <string name="settings">Settings</string>
    <string name="video_name">Video name: %s</string>
    <string name="video_width_and_height">Width x height: %1$d x %2$d</string>
    <string name="video_time">Total duration: %s</string>
    <string name="video_download_speed">Download speed: %d b/s</string>
    <string name="input_path">Enter a video URL</string>
    <string name="play">Play</string>
    <string name="init_play_fail">Failed to start the player.</string>
    <string name="video_bitrate">Current bitrate: %d</string>
    <string name="video_bitrate_empty">Current bitrate: NA</string>
    <string name="video_bitrate_title">Bitrate switching</string>
    <string name="video_bitrate_auto">Smoothly change to specified bitrate</string>
    <string name="video_bitrate_designated">Immediately change to specified bitrate</string>
    <string name="video_stop_downloading">Download control</string>
    <string name="video_set_play_speed">Playback speed</string>
    <string name="video_set_bandwidth_mode">Bandwidth adaptation</string>
    <string name="setting_cancel">Cancel</string>
    <string name="setting_ok">OK</string>
    <string name="video_stop_download">Stop download</string>
    <string name="video_keep_download">Resume download</string>
    <string name="automatic_adaptation">Auto-adaptation</string>
    <string name="close_adaptive_bandwidth">Disable bandwidth adaptation</string>
    <string name="open_adaptive_bandwidth">Enable bandwidth adaptation</string>
    <string name="close_logo">Disable watermark</string>
    <string name="play_mode">Playback mode</string>
    <string name="play_audio">Audio</string>
    <string name="play_video">Video</string>
    <string name="video_set_loop_play">Repeat mode</string>
    <string name="video_loop_play">Enable repeat mode</string>
    <string name="video_not_loop_play">Disable repeat mode</string>
    <string name="video_type">Video type</string>
    <string name="video_on_demand">VOD</string>
    <string name="video_live">Live streaming</string>
    <string name="video_view_setting">View</string>
    <string name="video_surfaceview_setting">SurfaceView</string>
    <string name="video_textureview_setting">TextureView</string>
    <string name="video_load_view_setting">View loading mode</string>
    <string name="video_mute_setting">Mute/Unmute</string>
    <string name="video_mute">Mute</string>
    <string name="video_not_mute">Unmute</string>
    <string name="video_init_bitrate_setting">Playback start bitrate</string>
    <string name="video_init_bitrate_use">Use specified playback start bitrate</string>
    <string name="video_init_bitrate_not_use">Use adaptive playback start bitrate</string>
    <string name="video_close_logo_setting">Watermark</string>
    <string name="video_open_logo_setting">Enable watermark</string>
    <string name="video_close_logo_one">Valid only for the next video</string>
    <string name="video_close_logo_all">Valid for all videos</string>
    <string name="video_set_volume">Volume</string>
    <string name="video_bitrate_range_setting">Bitrate range</string>
    <string name="video_bitrate_min_setting">Min. bitrate</string>
    <string name="video_bitrate_max_setting">Max. bitrate</string>
    <string name="video_bitrate_range_setting_title">Bitrate range (valid only for the next video)</string>
    <string name="video_bitrate_type">Match a higher bitrate preferentially</string>
    <string name="video_bitrate_height">Resolution height:</string>
    <string name="video_bitrate_width">Resolution width:</string>
    <string name="video_bitrate_init">Playback start bitrate:</string>
    <string name="video_volume_range">0-1.0</string>
    <string name="url">https://www.radiantmediaplayer.com/media/big-buck-bunny-360p.mp4</string>
    <string-array name="play_speed_text">
        <item>0.5x</item>
        <item>0.75x</item>
        <item>1.0x</item>
        <item>1.25x</item>
        <item>1.5x</item>
        <item>2.0x</item>
    </string-array>

    <string name="documents">Documents</string>
    <string name="codelab">CodeLab</string>
    <string name="relatedvideos">Related Courses</string>

    <string name="image_ad_id">teste9ih9j0rc3</string>
    <string name="video_ad_id">testb4znbuh3n2</string>
    <string name="exam">Exam</string>
    <string name="addtolist">Add to list</string>
    <string name="share">Share</string>
    <string name="skip"><u>Skip</u></string>
    <string name="str_next">Next</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="learningprogress">Learning Progress</string>
    <string name="signout">Sign Out</string>
    <string name="startexam">Start Exam</string>
    <string name="result">Result</string>
    <string name="select_ans">Select one answer</string>

    <string-array name="bannernmes">
        <item>Huawei App Gallery</item>
        <item>HMS Core 5.0</item>
        <item>Develope with HMS core</item>
        <item>Training</item>
    </string-array>
    <string-array name="urls">
        <item>https://developer.huawei.com/consumer/en/</item>
        <item>https://developer.huawei.com/consumer/en/</item>
        <item>https://developer.huawei.com/consumer/en/</item>
        <item>https://developer.huawei.com/consumer/en/</item>
    </string-array>

    <string name="description"><u>Description</u></string>
    <string name="platforms"><u>Courses Available in below platforms</u></string>

    <string name="login_success">Successfully Signed in</string>
    <string name="login_fail">Failed Sign in</string>
    <string name="logout_success">Successfully Sign out</string>
    <string name="logout_fail">Failed Sign out</string>
    <string name="finish">Finish</string>
    <string name="tryagain">Try Again</string>

    <string name="total_questions">Total Question: </string>
    <string name="correct_questions">Correct Answers: </string>
    <string name="wrong_questions">Wrong Answers: </string>
    <string name="price">500</string>
    <string name="sharevia">Share Via</string>


</resources>