<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".java.activities.CourseDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginRight="@dimen/_5dp">

            <TextView
                style="@style/app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_5dp"/>

            <TextView
                android:id="@+id/description"
                style="@style/app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="@dimen/_18sp"
                android:lineSpacingMultiplier="1.2"/>

            <TextView
                style="@style/app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/platforms"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_contentlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/addtolist"
                style="@style/app_button"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/addtolist" />

            <Button
                android:id="@+id/share"
                style="@style/app_button"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/share" />

        </LinearLayout>

    </RelativeLayout>
</layout>
