<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/score_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints">

            <TableRow android:layout_marginTop="@dimen/_10dp">

                <TextView
                    android:id="@+id/total_questions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/total_questions"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/_22sp" />

                <TextView
                    android:id="@+id/total_questions_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/_10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/_22sp" />
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/_10dp">

                <TextView
                    android:id="@+id/correct_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/correct_questions"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/_22sp" />

                <TextView
                    android:id="@+id/correct_answers_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/_10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/_22sp" />

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/_10dp">

                <TextView
                    android:id="@+id/wrong_answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/wrong_questions"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/_22sp" />

                <TextView
                    android:id="@+id/wrong_answers_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/_10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/_22sp" />

            </TableRow>

        </TableLayout>

        <RatingBar
            android:id="@+id/ratingBar1"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20dp"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_table" />

        <Button
            android:id="@+id/finish"
            style="@style/app_button"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50dp"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>